testsuite/tests/parser/should_fail/ParserNoTH2.hs
f = $$(x)  -- #20157
